fix jumping of footer on feature page

--- a/app/styles/app/layout.sass
+++ b/app/styles/app/layout.sass
@@ -119,9 +119,11 @@
   .topbar
     max-width: 1024px !important
     margin: auto !important
-    padding-bottom: 0 !important
     padding-left: 0 !important
     padding-right: 0 !important
+
+  .topbar
+    padding-bottom: 0 !important
 
   footer.hidden
     display: block
